--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <main class="hero">
         <h1 class="site-title">Welcome to JobBar</h1>
         <div class="button-row">
-            <button id="free" class="btn btn-primary" onclick="location.href='/free'">Freelance Page</button>
+            <button id="free" class="btn btn-primary" onclick="location.href='/freelance'">Freelance Page</button>
             <button id="links" class="btn btn-primary" onclick="location.href='/links'">Links Page</button>
         </div>
     </main>
