--- a/views/free.ejs
+++ b/views/free.ejs
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <div id="rtbanner">
-                <h2>All Resources</h2>
-                <input type="text" id="searchbar" onkeyup="searchResources()" placeholder="Search...">
-            </div>
+    <section>
+        <div id="rtbanner">
+            <h2>All Resources</h2>
+            <input type="text" id="searchbar" onkeyup="searchResources()" placeholder="Search...">
+        </div>
+        
+    </section>
+    
 </body>
 <script>
     function searchResources() {
