--- a/views/freelance.ejs
+++ b/views/freelance.ejs
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
+    <div>
+        <button onclick="location.href='/'">Home</button>
+        <button onclick="location.href='/links'">Links</button>
+    </div>
     <section>
         <div id="rtbanner">
             <h2>All Companies</h2>
