--- a/views/links.ejs
+++ b/views/links.ejs
@@ -9,13 +9,12 @@
 <body>
     <header>
         <h1>Classroom Links</h1>
-        <button><a href="/post" style="color: black">Create Link</a></button>
         <input type="text" id="searchbar" onkeyup="searchResources()" placeholder="Search...">
     </header>
     <div>
         <button onclick="location.href='/'">Home</button>
-        <button onclick="location.href='/links'">Links</button>
         <button onclick="location.href='/freelance'">Freelance Page</button>
+        <button><a href="/post" style="color: black">Create a Link</a></button>
     </div>
     <section>
         <div id="resourceCont">
