--- a/views/post.ejs
+++ b/views/post.ejs
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div>
-        <button onclick="location.href='/freelance'">Back to Freelance</button>
+        <button onclick="location.href='/freelance'">Freelance</button>
         <button onclick="location.href='/'">Home</button>
         <button onclick="location.href='/links'">Links</button>
     </div>
     <div>
-        <h1>Post your Company</h1>
+        <h1>Post your Company/Add your Link</h1>
         <form action="/post" method="POST">
             <div>
                 <label for="name">Company Name:</label>
