--- a/views/companies.ejs
+++ b/views/companies.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Companies</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/companies.css">
 </head>
 <body>
     <header>
