--- a/views/companies.ejs
+++ b/views/companies.ejs
@@ -12,7 +12,7 @@
         <h1>Classroom Companies</h1>
         <div>
             <button onclick="location.href='/'">Home</button>
-            <button><a href="/post" style="color: black">Create a Company</a></button>
+            <button onclick="location.href='/post'">Create a Company</button>
         </div>
         <input type="text" id="searchbar" onkeyup="searchResources()" placeholder="Search...">
     </header>
