--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,6 +21,7 @@ body{
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  background-repeat: no-repeat;
   color:var(--muted);
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
