--- a/views/jobPosts.ejs
+++ b/views/jobPosts.ejs
@@ -21,16 +21,17 @@
             <input type="hidden" name="company" value="<%= company %>">
             <div class="form-row">
                 <label for="title">Job Title:</label>
-                <input type="text" id="title" name="title" required>
+                <input type="text" id="title" name="title" maxlength="100" required>
             </div>
             <div class="form-row">
                 <label for="description">Description:</label>
-                <textarea id="description" name="description" required></textarea>
+                <textarea id="description" name="description" maxlength="200" required></textarea>
             </div>
             <div class="form-row">
                 <label for="pay">Pay:</label>
                 <input type="number" id="pay" name="pay" required>
             </div>
+            <input type="hidden" name="status" value="available">
             <button type="submit">Submit</button>
         </form>
       </div>
