--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/post.css">
 </head>
 
-<body>
+<body class="create-company-page">
     <nav class="top-controls">
         <button onclick="location.href='/'">Home</button>
         <button onclick="location.href='/companies'">Companies</button>
