--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,7 +21,7 @@ body{
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat no-repeat;
   color:var(--muted);
 }
 
