--- a/views/companies.ejs
+++ b/views/companies.ejs
@@ -25,11 +25,11 @@
             <%  if (companies && companies.length > 0) { %>
                 <ul>
                     <% companies.forEach(company => { %>
-                        <div class="company-item" style="background-color: <%= company.pColor %>; color: <%= company.bpColor %>;">
+                        <div class="company-item" style="background-color: <%= company.pColor %>; color: <%= company.bpColor %>; border: 2px solid <%= company.bpColor %>;">
                             <strong><%= company.name %></strong>
                             <p><%= company.description %></p>
-                            <a href="<%= company.link %>" target="_blank" style="background-color: <%= company.sColor %>; color: <%= company.bsColor %>;">Visit</a>
-                            <a href="/job/<%= encodeURIComponent(company.name) %>" class="btn-jobs" style="background-color: <%= company.sColor %>; color: <%= company.bsColor %>">View Jobs</a>
+                            <a href="<%= company.link %>" target="_blank" style="background-color: <%= company.sColor %>; color: <%= company.bsColor %>; border: 2px solid <%= company.bsColor %>;">Visit</a>
+                            <a href="/job/<%= encodeURIComponent(company.name) %>" class="btn-jobs" style="background-color: <%= company.sColor %>; color: <%= company.bsColor %>; border: 2px solid <%= company.bsColor %>;">View Jobs</a>
                         </div>
                     <% }); %>
                 </ul>
